--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -9,7 +10,35 @@
     tools:context=".MainActivity"
     tools:ignore="HardcodedText">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="bottom"
+        android:padding="30dp"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textSize="30sp"
+            android:maxLines="3"
+            android:fontFamily="sans-serif-light"
+            tools:text="5+10-3" />
+
+        <TextView
+            android:id="@+id/output"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textSize="50sp"
+            android:maxLines="2"
+            android:fontFamily="sans-serif"
+            tools:text="12" />
+
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,15 +48,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
+            android:layout_marginVertical="4dp"
             android:baselineAligned="false"
             android:orientation="horizontal">
 
             <Button
-
+                android:id="@+id/clearButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -37,9 +66,10 @@
                 android:textSize="23sp" />
 
             <Button
+                android:id="@+id/parenthesesButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -49,9 +79,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/percentageButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -61,9 +92,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/divideButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -78,14 +110,15 @@
             style="?android:attr/buttonBarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
+            android:layout_marginVertical="4dp"
             android:baselineAligned="false"
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/sevenButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -95,9 +128,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/eightButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -107,9 +141,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/nineButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -119,9 +154,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/multiplyButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -135,14 +171,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
+            android:layout_marginVertical="4dp"
             android:baselineAligned="false"
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/fourButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -152,9 +189,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/fiveButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -164,9 +202,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/sixButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -176,9 +215,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/subtractButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -191,14 +231,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
+            android:layout_marginVertical="4dp"
             android:baselineAligned="false"
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/oneButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -208,9 +249,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/twoButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -220,9 +262,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/threeButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -232,9 +275,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/plusButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -247,14 +291,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
+            android:layout_marginVertical="4dp"
             android:baselineAligned="false"
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/zeroButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -264,9 +309,10 @@
                 android:textSize="32sp" />
 
             <Button
+                android:id="@+id/decimalButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
@@ -275,23 +321,33 @@
                 android:textColor="?attr/colorPrimary"
                 android:textSize="32sp" />
 
-            <Button
-                style="?android:attr/buttonBarButtonStyle"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/removeButton"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="64dp"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
                 android:backgroundTint="?attr/colorOnSecondary"
-                android:text="❌"
-                android:textAlignment="center"
-                android:textColor="?attr/colorPrimary"
-                android:textSize="16sp" />
+                app:cardCornerRadius="124dp"
+                app:strokeColor="@color/transparent">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:tint="?attr/colorPrimary"
+                    app:srcCompat="@drawable/ic_round_tag_24"
+                    tools:ignore="ContentDescription,ImageContrastCheck"
+                    tools:tint="@color/transparent" />
+
+            </com.google.android.material.card.MaterialCardView>
 
             <Button
+                android:id="@+id/equalButton"
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="86dp"
+                android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
